# evidence-use-audit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: QC_notes_gate1_new_run.md  QC_notes_gate1_rerun_0622.md  QC_notes_gpt4o_mini_no_history_0623.md  QC_notes_study2_judge_gate_human_adjudication_0623.md  study2a_sufficiency_summary_0623.md  研究計画書0621.md  設計ブロック_0621.md
results/0621_phaseA_removal_feasibility/: phaseA_README.md  phaseA_human_adjudication_checked_summary_0622.xlsx  phaseA_human_adjudication_guideline_0621.md  phaseA_prompt.md  phaseA_summary.json
results/0623_study2_judge_gate/: README.md  determinacy_filter.csv  judge_gate_human_assessment_summary.json  judge_gate_human_sheet.csv  judge_gate_human_sheet_DRAFT.csv  judge_gate_human_sheet_DRAFT_README.md  judge_gate_lenient_assessment_summary.json  judge_gate_sample.csv  judge_gate_summary.json  judge_prompt_v1.md  judge_prompt_v2_lenient.md  judge_verdicts.csv  judge_verdicts_lenient.csv  study2_judge_gate_human_guideline.md  study2a_population_decision.json
results/0623_study2a_sufficiency/: phase5_8b_crosscheck_numbers.json
results/full_vs_noev_gpt4omini_32k/: manifest.json  smoke_prompt_pair.json
results/full_vs_noev_matched_llama31_8b_32k/: manifest.json
results/full_vs_noev_matched_qwen25_7b_32k/: manifest.json
results/study1/: gate1_per_item.csv  gate1_summary.json  gpt4o_mini_no_history_589.csv  m3_on_strict.csv  m3_summary.json  (+8 more)
tests/: test_judge_gate_assessment.py  test_matched_scaffold.py  test_study2_judge_gate.py  test_sufficiency_scaffold.py  test_validate_personamem.py
(+68 files in other folders)
